--- a/content/algebra/first-year-linear-algebra/2-solving-linear-equations/elimination.tex
+++ b/content/algebra/first-year-linear-algebra/2-solving-linear-equations/elimination.tex
@@ -261,5 +261,12 @@ so $\boxed{w=-1}$.
 Therefore, our solution is $(w,x,y,z) = (-1,7,4,-6)$.
 \end{example}
 
+\subsection{Elimination Matrices}
 
-\[ \]
+Much like how in \( \mathbb{R}^{3} \) every vector can be written as a linear combination of the standard basis vectors
+\( \vb{e}_{1}, \vb{e}_{2}, \vb{e}_{3} \),
+we can describe the steps of Gaussian elimination using linear combinations of elimination matrices.
+
+\begin{dfn}
+By an \vocab{elimination matrix}, denoted \( \vb{E}_{ji} \) with \( j > i \), we mean a matrix that is equal to the identity except for a scalar \( m \) in the \( (j,i) \) entry.
+\end{dfn}
