--- a/content/geometry-and-topology/algebraic-topology/algebraic-topology-master.tex
+++ b/content/geometry-and-topology/algebraic-topology/algebraic-topology-master.tex
@@ -1,2 +1,5 @@
 \chapter{The Fundamental Group}
 \input{content/geometry-and-topology/algebraic-topology/1-the-fundamental-group/algebraic-topology-1-the-fundamental-group}
+
+\chapter{Homology}
+\input{content/geometry-and-topology/algebraic-topology/homology/homology}
