--- a/sample.bib
+++ b/sample.bib
@@ -1,18 +1,187 @@
-
-
 @Book{ref:stewart,
 author      ="Stewart, J. and Clegg, D.K. and Watson, S.",
 title       = "Calculus",
+edition      = "9th",
 publisher   = "Cengage Learning",
 year        = "2020",
-isbn        = "9780357043349",
+isbn        = "978-0-357-04334-9",
 }
 
-@Book{ref:axler,
+@Book{ref:axler_linalg,
   author       = "Sheldon Axler",
-  title        = "Linear algebra done right",
+  title        = "Linear Algebra Done Right",
+  edition      = "4th",
   publisher    = "Springer",
-  year         = "1997",
+  year         = "2024",
   address      = "New York",
   ISBN         = "978-0-387-98258-8",
+}
+
+@Book{ref:axler_precalc,
+  author       = "Sheldon Axler",
+  title        = "Precalculus: A Prelude to Calculus",
+  edition      = "3rd",
+  publisher    = "Wiley",
+  year         = "2017",
+  address      = "Hoboken, NJ",
+  ISBN         = "978-1-119-05581-5",
+}
+
+@Book{ref:strang_laaa,
+  author       = "Gilbert Strang",
+  title        = "Linear Algebra and Its Applications",
+  edition      = "4th",
+  publisher    = "Thomson, Brooks/Cole",
+  year         = "2006",
+  address      = "Belmont, CA",
+  ISBN         = "978-0-030-10567-8",
+}
+
+@Book{ref:strang_itla,
+  author       = "Gilbert Strang",
+  title        = "Introduction to Linear Algebra",
+  edition      = "6th",
+  publisher    = "Wellesley-Cambridge Press",
+  year         = "2023",
+  address      = "Wellesley, MA",
+  ISBN         = "978-1-733-14667-8",
+}
+
+@Book{ref:rudin_pma,
+  author       = "Walter Rudin",
+  title        = "Principles of Mathematical Analysis",
+  edition      = "3rd",
+  publisher    = "McGraw-Hill",
+  year         = "1976",
+  address      = "New York",
+  isbn         = "978-0-070-54235-8",
+}
+
+@Book{ref:hatcher_topology,
+  author       = "Allen Hatcher",
+  title        = "Algebraic Topology",
+  edition      = "1st",
+  publisher    = "Cambridge University Press",
+  year         = "2002",
+  address      = "Cambridge",
+  isbn         = "978-0-521-79540-1",
+}
+
+@Book{ref:axler_measure,
+  author       = "Sheldon Axler",
+  title        = "Measure, Integration \& Real Analysis",
+  edition      = "1st",
+  publisher    = "Springer",
+  year         = "2020",
+  address      = "Cham",
+  isbn         = "978-3-030-33143-6",
+}
+@Book{ref:lee_topological,
+  author       = "John M. Lee",
+  title        = "Introduction to Topological Manifolds",
+  edition      = "2nd",
+  publisher    = "Springer",
+  year         = "2011",
+  address      = "New York",
+  isbn         = "978-1-441-97989-0",
+}
+
+@Book{ref:lee_smooth,
+  author       = "John M. Lee",
+  title        = "Introduction to Smooth Manifolds",
+  edition      = "2nd",
+  publisher    = "Springer",
+  year         = "2013",
+  address      = "New York",
+  isbn         = "978-1-441-99982-8",
+}
+
+@Book{ref:hamilton_gauge,
+  author       = "Mark J. D. Hamilton",
+  title        = "Mathematical Gauge Theory",
+  edition      = "1st",
+  publisher    = "Springer",
+  year         = "2017",
+  address      = "Cham",
+  isbn         = "978-3-319-68439-0",
+}
+
+@Book{ref:baez_knots,
+  author       = "John C. Baez and Javier P. Muniain",
+  title        = "Gauge Fields, Knots and Gravity",
+  edition      = "1st",
+  publisher    = "World Scientific",
+  year         = "1994",
+  address      = "Singapore",
+  isbn         = "978-981-02-2034-7",
+}
+
+@Book{ref:garrity_em,
+  author       = "Thomas A. Garrity",
+  title        = "Electricity and Magnetism for Mathematicians",
+  edition      = "1st",
+  publisher    = "Cambridge University Press",
+  year         = "2015",
+  address      = "Cambridge",
+  isbn         = "978-1-107-07820-8",
+}
+
+@Book{ref:lee_riemannian,
+  author       = "John M. Lee",
+  title        = "Introduction to Riemannian Manifolds",
+  edition      = "2nd",
+  publisher    = "Springer",
+  year         = "2018",
+  address      = "Cham",
+  isbn         = "978-3-319-91754-2",
+}
+
+@Book{ref:lee_complex,
+  author       = "John M. Lee",
+  title        = "Introduction to Complex Manifolds",
+  edition      = "1st",
+  publisher    = "Springer",
+  year         = "2021",
+  address      = "Cham",
+  isbn         = "978-3-030-45887-4",
+}
+
+@Book{ref:janich_vector,
+  author       = "Klaus Jänich",
+  title        = "Vector Analysis",
+  edition      = "1st",
+  publisher    = "Springer",
+  year         = "2001",
+  address      = "New York",
+  isbn         = "978-0-387-98649-4",
+}
+
+@Book{ref:hubbard_vector,
+  author       = "John H. Hubbard and Barbara Burke Hubbard",
+  title        = "Vector Calculus, Linear Algebra, and Differential Forms: A Unified Approach",
+  edition      = "5th",
+  publisher    = "Matrix Editions",
+  year         = "2015",
+  address      = "Ithaca",
+  isbn         = "978-0-971-57679-0",
+}
+
+@Book{ref:jost_riemannian,
+  author       = "Jürgen Jost",
+  title        = "Riemannian Geometry and Geometric Analysis",
+  edition      = "7th",
+  publisher    = "Springer",
+  year         = "2017",
+  address      = "Cham",
+  isbn         = "978-3-319-61859-3",
+}
+
+@Book{ref:warner_manifolds,
+  author       = "Frank W. Warner",
+  title        = "Foundations of Differentiable Manifolds and Lie Groups",
+  edition      = "1st",
+  publisher    = "Springer",
+  year         = "1983",
+  address      = "New York",
+  isbn         = "978-0-387-90894-6",
 }
