--- a/Main.tex
+++ b/Main.tex
@@ -6,39 +6,32 @@
 
 
 
-
-\addbibresource{sample.bib} %Imports bibliography file
-
-
-
 \begin{document}
+
 \subfile{cover/frontcover}
 
 \newpage
+
 \frontmatter
 
 \setcounter{tocdepth}{0}
 \noptcrule
+\chapter*{Contents}
+\addcontentsline{toc}{chapter}{Contents}
+\renewcommand{\contentsname}{\vspace{-3em}}
 \tableofcontents
 
-\chapter*{Acknowledgments}
-\addcontentsline{toc}{chapter}{Acknowledgments}
-
-This project benefited from open-source tools and examples created by:\\\\
-
-\textbf{Evan Chen} — The Napkin project served as the initial model for this compendium, and portions of its code are used throughout. GitHub: \url{https://github.com/vEnhance/napkin/} \\
-
-\textbf{Aareyan Manzoor (The TeXromancers)} — Provided permission to reuse the code used for the front cover. GitHub: \url{https://aareyanmanzoor.github.io/Texromancers.html} \\
-
-\textbf{Gilles Castel (R.I.P.)} — His work on integrating UltiSnips into LaTeX workflows (I use HyperSnips, a VS Code port) removed many bottlenecks and sped up development. GitHub: \url{https://github.com/gillescastel}
-
+\input{frontmatter/frontmatter}
 
 
 \mainmatter
 
+
 \part{Precalculus}
 \label{part: Precalculus}
+\vspace*{2em} The primary resource for this part is \cite{ref:axler_precalc}.  \vspace*{1em}
 \parttoc
+\input{content/analysis/precalculus/precalculus-master}
 
 \part{First Year Calculus}
 \label{part: First Year Calculus}
@@ -46,54 +39,50 @@ This project benefited from open-source tools and examples created by:\\\\
 \parttoc
 \input{content/analysis/first-year-calculus/first-year-calculus-master}
 
-
 \part{First Year Linear Algebra}
 \label{part: First Year Linear}
+\vspace*{2em} The primary resources for this part are \cite{ref:strang_laaa} and \cite{ref:strang_itla}. \vspace*{1em}
 \parttoc
 \input{content/algebra/first-year-linear-algebra/first-year-linear-algebra-master}
-
 
 \part{Multivariable Calculus}
 \label{part: Multivariable Calculus}
 \parttoc
 \input{content/analysis/multivariable-calculus/multivariable-calculus-master}
 
-
 \part{Ordinary Differential Equations}
 \label{part: Ordinary Differential Equations}
 \parttoc
 \input{content/analysis/ordinary-differential-equations/ordinary-differential-equations-master}
 
-
 \part{A Second Course in Linear Algebra}
 \label{Proof Based Linear Algebra}
-The primary resource for this part is \cite{ref:axler}. \vspace*{-1em}
+\vspace*{2em} The primary resource for this part is \cite{ref:axler_linalg}. \vspace*{-1em}
 \parttoc
 \input{content/algebra/second-year-linear-algebra/second-year-linear-algebra-master}
 
 \part{Real Analysis}
+\vspace*{2em} The primary resource for the earlier chapters of this this part is \cite{ref:rudin_pma}. Some exercises were also taken from: \cite{ref:lee_topological}. The chapters pertaining to measure theory and onward use \cite{ref:axler_measure} as the primary source.\vspace*{-1em}
 \label{Real Analysis}
 \parttoc
 \input{content/analysis/real-analysis/real-analysis-master}
 
 
-\part{\enskip Complex Analysis}
+\part{Complex Analysis}
 \label{Complex Analysis}
 \parttoc
 \input{content/analysis/complex-analysis/complex-analysis-master}
 
 
-\part{\enskip Group Theory}
+\part{Group Theory}
 \label{Group Theory}
 \parttoc
 \input{content/algebra/group-theory/group-theory-master}
-
 
 \part{Ring Theory}
 \label{Ring Theory}
 \parttoc
 \input{content/algebra/ring-theory/ring-theory-master}
-
 
 \part{Point-Set Topology}
 \label{part: Point-Set Topology}
@@ -105,53 +94,65 @@ The primary resource for this part is \cite{ref:axler}. \vspace*{-1em}
 \parttoc
 \input{content/analysis/functional-analysis/functional-analysis-master}
 
-\part{\enskip Algebraic Topology}
+\part{Fourier Analysis}
+\label{part:Fourier-Analysis}
+\parttoc 
+\input{content/analysis/fourier-analysis/fourier-analysis-master}
+
+\part{Partial Differential Equations}
+\label{part:Partial-Differential-Equations}
+\parttoc
+\input{content/analysis/partial-differential-equation/partial-differential-equations-master}
+
+\part{ Algebraic Topology}
+\vspace*{2em} The primary resource for this part is \cite{ref:hatcher_topology}.  \vspace*{1em}
 \label{Algebraic Topology}
 \parttoc 
 \input{content/geometry-and-topology/algebraic-topology/algebraic-topology-master}
 
-
-\part{\enskip Manifolds}
+\part{Manifolds}
+\vspace*{2em} The primary resources for this part are \cite{ref:lee_smooth} and \cite{ref:lee_topological}. \cite{ref:lee_riemannian}, \cite{ref:lee_complex},\cite{ref:janich_vector}, \cite{ref:hubbard_vector}, \cite{ref:jost_riemannian}, \cite{ref:baez_knots}, \cite{ref:warner_manifolds} have been used as well. \vspace*{-1em}
 \label{Manifolds}
 \parttoc
 \input{content/geometry-and-topology/manifolds/manifolds-master}
 
-
-\part{ \enskip Lie Groups, Lie Algebras, and their Representations}
+\part{ Lie Groups, Lie Algebras, and their Representations}
 \label{part: Lie Groups, Lie Algebras, and their Representations}
 \parttoc
 \input{content/geometry-and-topology/lie-groups/lie-groups-master}
 \input{content/algebra/lie-algebras/lie-algebras-master}
 
-
-
-\part{ \enskip Gauge Theory}
+\part{Gauge Theory}
+\vspace*{2em} The primary resource for this part is \cite{ref:hamilton_gauge}.  The author's personal understanding has greatly benefited from use of \cite{ref:baez_knots} and \cite{ref:garrity_em}.\vspace*{-1em}
 \label{part:Gauge-Theory}
 \parttoc
 \input{content/geometry-and-topology/gauge-theory/gauge-theory-master}
 
-\part{\enskip A First Course in Probability and Statistics}
+\part{ A First Course in Probability and Statistics}
 \label{part:First-Course-Probability}
 \parttoc
 \input{content/probability-and-statistics/first-course-in-probability/first-course-in-probability-master}
 
-\part{\enskip \enskip A First Course in Number Theory}
+\part{A First Course in Number Theory}
 \label{part:Basic-Number-Theory}
 \parttoc
 \input{content/algebra/basic-number-theory/basic-number-theory}
 
+
 \appendix
-\part{\enskip Appendix}
+\part{ Appendix} 
 \label{part: Appendix}
 
 \parttoc
+\chapter{Basic Logic}
+\label{ch:Logic}
+\input{content/appendix/logic/logic-master}
 \chapter{Naive Approach to Set Theory}
 \label{ch:Naive Sets}
 \input{content/appendix/naive-set-theory/naive}
 \chapter{Inequalities}
 \label{ch:Inequalities}
 \input{content/appendix/inequalities/inequalites-master}
-
 
 
 \printbibliography[
