--- a/content/algebra/second-year-linear-algebra/span-basis-and-dimension/span-and-independence.tex
+++ b/content/algebra/second-year-linear-algebra/span-basis-and-dimension/span-and-independence.tex
@@ -50,3 +50,25 @@
     \[ \vb{v} = \beta_{1} \vb{v}_{1} + \left( \beta_{2} - \beta_{1}\right) \vb{v}_{2} + \left( \beta_{3} - \beta_{2} \right) \vb{v}_{3} + \left( \beta_{4} - \beta_{3} \right)\vb{v}_{4}\]
     so \( \mathrm{span} \left( \vb{v}_{1} - \vb{v}_{2}, \vb{v}_{2}- \vb{v}_{3}, \vb{v}_{3}- \vb{v}_{4}, \vb{v}_{4} \right) \subseteq  \mathrm{span} \left( \vb{v}_{1}, \vb{v}_{2}, \vb{v}_{3}, \vb{v}_{4} \right) \).
 \end{solution}
+
+\begin{lemma}
+    Let \( \left\{ \vb{v}_{1}, \dots, \vb{v}_{n} \right\} \) be a collection of vectors in a vector space \( \mathbf{V} \). \( \mathrm{span} \left( \vb{v}_{1}, \dots, \vb{v}_{n}\right) \) is the smallest subspace that contains \( \left\{ \vb{v}_{1}, \dots, \vb{v}_{n} \right\} \).
+\end{lemma}
+\begin{proof}
+    This lemma is claiming two things: 
+    \begin{enumerate}[label=\textbf{\roman*)}]
+        \item \( \mathrm{span} \left( \vb{v}_{1}, \dots, \vb{v}_{n} \right) \) is a subspace. 
+        \item If \( \mathbf{W} \) is a subspace of \( \mathbf{V} \) that contains \( \left\{ \vb{v}_{1}, \dots, \vb{v}_{n} \right\} \), then \( \mathrm{span} \left( \vb{v}_{1}, \dots, \vb{v}_{n} \right) \subseteq \mathbf{W} \).
+    \end{enumerate}
+    For \textbf{(i)}, pick \( \vb{a}, \vb{b} \in \mathrm{span} \left( \vb{v}_{1}, \dots, \vb{v}_{n} \right) \) and \( \lambda \in \mathbb{K} \). Then, \( \vb{a} = \sum_{k=1}^{n} \alpha_{k} \vb{v}_{k} \) and \( \vb{b} = \sum_{k=1}^{n } \beta_{k} \vb{v}_{k} \) for \( \alpha_{k}, \beta_{k} \in \mathbb{K} \) so 
+    \begin{align*}
+        \vb{a} + \lambda \vb{b} &= \sum_{k=1}^{n} \alpha_{k} \vb{v}_{k} + \lambda \sum_{k=1}^{n } \beta_{k} \vb{v}_{k} \\
+        &= \sum_{k=1}^{n } \alpha_{k} \vb{v}_{k} + \lambda \beta_{k} \vb{v}_{k} \\
+        &= \sum_{k=1}^{n } \left( \alpha_{k} + \lambda \beta_{k} \right) \vb{v}_{k}
+    \end{align*}
+   So we \(  \vb{a} + \lambda \vb{b} \) can be expressed as a linear combination of \( \left\{ \vb{v}_{1}, \dots, \vb{v}_{n} \right\}  \) so \(  \vb{a} + \lambda \vb{b}  \in \mathrm{span} \left( \vb{v}_{1}, \dots, \vb{v}_{n} \right)\). So \(\mathrm{span} \left( \vb{v}_{1}, \dots, \vb{v}_{n} \right)   \) is a vector subspace. \\ 
+   For \textbf{(ii)}, suppose that \( \mathbf{W} \) is a vector subspace that contains \(  \left\{ \vb{v}_{1}, \dots, \vb{v}_{n} \right\} \). By closure under addition and scalar multiplication, for any \( \lambda_{k} \in \mathbb{K} \), we have that 
+   \[ \sum_{k=1}^{n } \lambda_{k} \vb{v}_{k} \in \mathbf{W} \]
+   so \( \mathrm{span} \left( \vb{v}_{1}, \dots, \vb{v}_{n} \right) \subseteq \mathbf{W}  \).
+\end{proof}
+
